<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageview_profile"
        android:layout_width="220dp"
        android:layout_height="180dp"
        android:contentDescription="@string/gambar_profile"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ardina" />

    <TextView
        android:id="@+id/judulProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/profilku"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageview_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/backgroundProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/judulProfile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/placeholderNama"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/nama"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_nama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/placeholderNama"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/placeholderNama"
                app:layout_constraintTop_toTopOf="@+id/placeholderNama"
                tools:text=": Namaku" />

            <TextView
                android:id="@+id/placeholderNim"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/nim"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/placeholderNama"
                app:layout_constraintStart_toStartOf="@+id/placeholderNama"
                app:layout_constraintTop_toBottomOf="@+id/placeholderNama" />

            <TextView
                android:id="@+id/textview_nim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/textview_nama"
                app:layout_constraintStart_toStartOf="@+id/textview_nama"
                app:layout_constraintTop_toTopOf="@+id/placeholderNim"
                tools:text=": Nimku" />

            <TextView
                android:id="@+id/placeholderEmail"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/placeholderNim"
                app:layout_constraintStart_toStartOf="@+id/placeholderNim"
                app:layout_constraintTop_toBottomOf="@+id/placeholderNim" />

            <TextView
                android:id="@+id/textview_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/textview_nim"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textview_nim"
                app:layout_constraintTop_toTopOf="@+id/placeholderEmail"
                tools:text=": Emailku" />

            <Button
                android:id="@+id/buttonLanjut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/lanjut"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_email"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>